13.11.22 - fixed footer & header overflow; added reset.css

--- a/Etalon/static/css/style.css
+++ b/Etalon/static/css/style.css
@@ -1,19 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
 html {
-    min-width: 400px;
-    position: relative;
-    min-height: 100%;
-    padding-bottom: 100px;
+    width: 100%;
+    min-height: 100vh;
 }
 
 body {
-    background-color: #fbeb9d;
-    flex-direction: column;
-    padding-bottom: 70px;
-    margin-bottom: 100px;
+    /*height: 100%;*/
+    width: 100%;
 
-    /*min-width: 400px;*/
-    /*background-color: #bbb389;*/
-    /*background-color: #a8a69c;*/
+    min-height: 100%;
+    background-color: #fbeb9d;
 }
 
 .navbar {
@@ -31,24 +32,37 @@ body {
     font-weight: 700;
 }
 
+
+/*.wrapper {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    min-height: 100vh;*/
+/*}*/
+
 .content {
+    /*flex: 1 0 auto;*/
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight: 500;
 }
 
-footer {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100px;
-    min-width: 400px;
-    /*width: auto;*/
-    /*flex: 0 0 auto;*/
 
+/*.content.container {*/
+/*    flex: 1 0 auto;*/
+/*}*/
+
+.footer {
+    width: 100%;
     background-color: rgba(30, 33, 37, 0.085);
 }
+
+/*.footer .container {*/
+/*    flex: 0 0 auto;*/
+
+
+/*    !*min-height: 100vh;*!*/
+/*}*/
+
 
 .footer-text {
     font-family: 'Montserrat', sans-serif;
@@ -58,24 +72,10 @@ footer {
     color: #1e2125;
 }
 
-footer a:hover {
+.footer a:hover {
     text-decoration: underline;
 }
 
-.footer-text i {
-    font-size: 50px;
-}
-
-/*@media (max-width: 400px) {*/
-/*    .footer-text i {*/
-/*        font-size: 25px;*/
-/*    }*/
-
-/*    footer {*/
-/*        min-width: 320px;*/
-/*    }*/
-
-/*    html {*/
-/*        min-width: 320px;*/
-/*    }*/
+/*.footer-text i {*/
+/*    font-size: 50px;*/
 /*}*/
